[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Editor/TransformHandle.png" type="Texture2D" id=1]
[ext_resource path="res://src/Editor/EditorLevelLimiter.gd" type="Script" id=2]
[ext_resource path="res://src/Editor/Cursor.tres" type="StyleBox" id=3]

[node name="EditorLevelLimiter" type="MarginContainer"]
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Margin" type="MarginContainer" parent="."]
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 2
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="LevelRect" type="Panel" parent="Margin"]
offset_left = 16.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 112.0
mouse_filter = 2
theme_override_styles/panel = ExtResource( 3 )

[node name="TopLeft" type="TextureButton" parent="."]
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )

[node name="TopRight" type="TextureButton" parent="."]
offset_left = 112.0
offset_right = 128.0
offset_bottom = 16.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomLeft" type="TextureButton" parent="."]
offset_top = 112.0
offset_right = 16.0
offset_bottom = 128.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 8
texture_normal = ExtResource( 1 )

[node name="BottomRight" type="TextureButton" parent="."]
offset_left = 112.0
offset_top = 112.0
offset_right = 128.0
offset_bottom = 128.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource( 1 )

[node name="Top" type="TextureButton" parent="."]
offset_left = 56.0
offset_right = 72.0
offset_bottom = 16.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="TextureButton" parent="."]
offset_left = 56.0
offset_top = 112.0
offset_right = 72.0
offset_bottom = 128.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="."]
offset_top = 56.0
offset_right = 16.0
offset_bottom = 72.0
mouse_filter = 1
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="."]
offset_left = 112.0
offset_top = 56.0
offset_right = 128.0
offset_bottom = 72.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
